--- a/CRUD Operations/Helpers/Localization/ApiMessages.resx
+++ b/CRUD Operations/Helpers/Localization/ApiMessages.resx
@@ -1,6 +1,29 @@
-﻿namespace CRUD_Operations.Helpers.Localization
-{
-    public class ApiMessages
-    {
-    }
-}
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!-- Auth Messages -->
+  <data name="UserNotFound" xml:space="preserve">
+    <value>User not found</value>
+  </data>
+  <data name="InvalidCredentials" xml:space="preserve">
+    <value>Invalid username or password</value>
+  </data>
+  <data name="RegistrationSuccess" xml:space="preserve">
+    <value>Registration successful</value>
+  </data>
+  
+  <!-- Validation Messages -->
+  <data name="RequiredField" xml:space="preserve">
+    <value>{0} is required</value>
+  </data>
+  <data name="InvalidEmail" xml:space="preserve">
+    <value>Please enter a valid email address</value>
+  </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>Password must be between {0} and {1} characters</value>
+  </data>
+  
+  <!-- Success Messages -->
+  <data name="UserCreated" xml:space="preserve">
+    <value>User created successfully</value>
+  </data>
+</root>
